Fixed layout issues in mobile mode

--- a/src/index.css
+++ b/src/index.css
@@ -92,7 +92,6 @@ button:active {
 .welcome {
     display: flex;
     flex-direction: row;
-    min-height: 100vh;
     width: 100%;
     justify-content: space-evenly;
 }
@@ -520,9 +519,6 @@ button:active {
         background-color: #fff;
     }
 
-    .welcome {
-        text-shadow: 0px 0px 30px rgb(255, 255, 255);
-    }
 
     .right-part {
         overflow: hidden;
@@ -531,6 +527,7 @@ button:active {
     }
 
     .welcome {
+        text-shadow: 0px 0px 30px rgb(255, 255, 255);
         background-image: url('../src/assets/images/bieber2.png'), linear-gradient(to bottom, rgb(241, 240, 240), rgba(110, 89, 1, 0.795));
         background-size: cover;
         background-position: center;
